Cleanup the legacy code